css/style.css
*,*::after,*::before{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root{
    --background-dark: #121212;
    --black:#000;
    --grey: #1f1f1f;
    --button-background: #f0f0f0;
    --text-color: #a8a8a8;
}
body{
    font-family: 'Poppins', sans-serif;
    background-color: var(--black);
    line-height: 1.6;
    color: var(--button-background);
    scroll-behavior: smooth;
}
a{
    text-decoration: none;
    color: var(--black);
    background-color: var(--button-background);
    padding: 0.8rem;
    border-radius: 50px;
    font-weight: 600;

}
ul{
    list-style:none;
}
img{
    max-width: 100%;
}
/* Utility Classes */

.contanier{
    max-width: 1100px;
    margin: 0 auto;
}

/* Navigation */

.navbar{
    padding: 1rem 2rem;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1000;
    
}
.navbar__container{
    display: flex;
    gap: 1rem;
    align-items: center;
    justify-content: space-around;
}
.navbar__logo i{
  color: var(--button-background);
  
  
}
.navbar__left{
    display: flex;
    gap: 1rem;
    
}
.navbar__text{
    color: var(--text-color);
}
.navbar__left .navbar__home,
.navbar__right .navbar__user-icon{
    text-align: center;
    padding: 0.5rem;
    background-color: var(--grey);
    border-radius: 100%;
}
.navbar .navbar__search{
    display: flex;
    gap: 1rem;
    align-items: center;
    background-color: var(--grey);
    border-radius: 2rem;
    padding: 1rem;
   
    
}

.navbar .navbar__right{
    display: flex;
    gap: 1rem;
    align-items: center;
    justify-content: right;
   
}
/* Main section */
.main{
    margin: 5rem 1rem;
    
}
.main__container{
    display: flex;
    gap:0.5rem;
    height: 85vh;
}
.main__left{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    background-color: var(--background-dark);
    padding: 1rem;
    border-radius: 10px;
    width: 25rem;

}
.main__left-top{
    display: flex;
    gap:2rem;
    align-items: baseline;
    justify-content: space-between;
    
}
.main__left-button, .main__label-button{
    padding: 0.4rem 0.8rem;
    background-color: var(--grey);
    color: var(--button-background);
    font-size: 0.8rem;
    
}
.main__labels{
    display: flex;
    gap: 1rem;
}
.main__search{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.main__search-right{
    color: var(--text-color);
}
.main__text{
    font-size: 0.9rem;
    color: var(--text-color);
}

.main__right{
    display: flex;
    flex-direction: column;
    gap: 2rem;
    flex: 2;
    background: #1F1F1F;
    background: linear-gradient(180deg,rgba(31, 31, 31, 1) 0%, rgba(18, 18, 18, 1) 100%);
    padding: 1rem;
    border-radius: 10px;
    overflow-y: scroll;
    
}

.main__left-cover{
    width: 3rem;
}
.main__left-cover img{
    border-radius: 5px;
}
.main__left-item{
    display: flex;
    gap: 1rem;
}
.main__left-title{
    font-weight: 500;
}
.main__labels-right .main__label-button{
    background-color: #404040;
}
.main__labels-right  .current{
    background-color: var(--button-background);
    color: var(--background-dark);
}
.main__topic-heading{
    display: flex;
    justify-content: space-between;
    margin-bottom: 1rem;
}
.main__topic-list{
    display: flex;
    flex-direction: column;
    gap: 4rem;
}
.main__right-list{
    display: flex;
    gap: 2rem;
    overflow-x: scroll;
}
.main__right-item{
    max-width: 10rem;
    min-width: 10rem;
    
}
.main__topic-cover img{
    border-radius: 8px;
}
.main__List__topic-description{
    font-size: 0.8rem;
    color: var(--text-color);
}

